--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'E456'
 - !lcsh 'Lincoln, Abraham, 1809-1865'
+- GITenberg
 title: Abraham Lincoln
 url: http://www.gutenberg.org/ebooks/42526
